--- a/makefile.gen
+++ b/makefile.gen
@@ -1,29 +1,16 @@
-BIN= $(GDK)/bin
-LIB= $(GDK)/lib
+MAKEFILE_DIR := $(dir $(lastword $(MAKEFILE_LIST)))
+MAKEFILE_DIR := $(subst \,/,$(MAKEFILE_DIR))
 
-LIBSRC= $(GDK)/src
-LIBRES= $(GDK)/res
-LIBINCLUDE= $(GDK)/inc
+ifneq ("$(wildcard $(MAKEFILE_DIR)bin/rescomp.jar)","")
+    GDK := $(patsubst %/,%,$(MAKEFILE_DIR))
+endif
 
-SRC= src
-RES= res
-INCLUDE= inc
+include $(GDK)/common.mk
 
-SHELL= $(BIN)/sh
-RM= $(BIN)/rm
-CP= $(BIN)/cp
-CC= $(BIN)/gcc
-LD= $(BIN)/ld
-NM= $(BIN)/nm
-JAVA= java
-ECHO= echo
-OBJCPY= $(BIN)/objcopy
-ASMZ80= $(BIN)/sjasm
-MACCER= $(BIN)/mac68k
-SIZEBND= $(BIN)/sizebnd
-BINTOS= $(BIN)/bintos
-RESCOMP= $(JAVA) -jar $(BIN)/rescomp.jar
-MKDIR= $(BIN)/mkdir
+SRC := src
+RES := res
+INCLUDE := inc
+
 
 SRC_C= $(wildcard *.c)
 SRC_C+= $(wildcard $(SRC)/*.c)
@@ -61,19 +48,18 @@ OBJ+= $(SRC_S80:.s80=.o)
 OBJ+= $(SRC_ASM:.asm=.o)
 OBJ+= $(SRC_S:.s=.o)
 OBJ+= $(SRC_C:.c=.o)
-OBJS= $(addprefix out/, $(OBJ))
+OBJS:= $(addprefix out/, $(OBJ))
 
-DEPS= $(OBJS:.o=.d)
+DEPS:= $(OBJS:.o=.d)
 
 #-include $(DEPS)
 
-LST= $(SRC_C:.c=.lst)
-LSTS= $(addprefix out/, $(LST))
+LST:= $(SRC_C:.c=.lst)
+LSTS:= $(addprefix out/, $(LST))
 
-INCS= -I$(INCLUDE) -I$(SRC) -I$(RES) -I$(LIBINCLUDE) -I$(LIBRES)
-DEFAULT_FLAGS= -m68000 -Wall -Wextra -Wno-shift-negative-value -Wno-main -Wno-unused-parameter -fno-builtin $(INCS) -B$(BIN)
-FLAGSZ80= -i$(SRC) -i$(INCLUDE) -i$(RES) -i$(LIBSRC) -i$(LIBINCLUDE)
-
+INCS:= -I$(INCLUDE) -I$(SRC) -I$(RES) -I$(INCLUDE_LIB) -I$(RES_LIB)
+DEFAULT_FLAGS= $(EXTRA_FLAGS) -DSGDK_GCC -m68000 -Wall -Wextra -Wno-shift-negative-value -Wno-main -Wno-unused-parameter -fno-builtin $(INCS) -B$(BIN)
+FLAGSZ80:= -i$(SRC) -i$(INCLUDE) -i$(RES) -i$(SRC_LIB) -i$(INCLUDE_LIB)
 
 #release: FLAGS= $(DEFAULT_FLAGS) -Os -fomit-frame-pointer -fuse-linker-plugin -flto
 release: FLAGS= $(DEFAULT_FLAGS) -O3 -fuse-linker-plugin -fno-web -fno-gcse -fno-unit-at-a-time -fomit-frame-pointer -flto
@@ -137,13 +123,13 @@ pre-build:
 
 out/rom.bin: out/rom.out
 	$(OBJCPY) -O binary out/rom.out out/rom.bin
-	$(SIZEBND) out/rom.bin -sizealign 131072
+	$(SIZEBND) out/rom.bin -sizealign 131072 -checksum
 
 out/symbol.txt: out/rom.out
-	$(NM) --plugin=liblto_plugin-0.dll -n out/rom.out > out/symbol.txt
+	$(NM) $(LTO_PLUGIN) -n out/rom.out > out/symbol.txt
 
 out/rom.out: out/sega.o out/cmd_ $(LIBMD)
-	$(CC) -B$(BIN) -n -T $(GDK)/md.ld -nostdlib out/sega.o @out/cmd_ $(LIBMD) $(LIB)/libgcc.a -o out/rom.out -Wl,--gc-sections
+	$(CC) -B$(BIN) -n -T $(GDK)/md.ld -nostdlib out/sega.o @out/cmd_ $(LIBMD) $(LIBGCC) -o out/rom.out -Wl,--gc-sections
 	$(RM) out/cmd_
 
 out/cmd_: $(OBJS)
@@ -153,15 +139,15 @@ out/sega.o: $(SRC)/boot/sega.s out/rom_head.bin
 	$(CC) -x assembler-with-cpp $(DEFAULT_FLAGS) -c $(SRC)/boot/sega.s -o $@
 
 out/rom_head.bin: out/rom_head.o
-	$(LD) -T $(GDK)/md.ld -nostdlib --oformat binary -o $@ $<
+	$(OBJCPY) -O binary $< $@
 
 out/rom_head.o: $(SRC)/boot/rom_head.c
 	$(CC) $(DEFAULT_FLAGS) -c $< -o $@
 
-$(SRC)/boot/sega.s: $(LIBSRC)/boot/sega.s
+$(SRC)/boot/sega.s: $(SRC_LIB)/boot/sega.s
 	$(CP) $< $@
 
-$(SRC)/boot/rom_head.c: $(LIBSRC)/boot/rom_head.c
+$(SRC)/boot/rom_head.c: $(SRC_LIB)/boot/rom_head.c
 	$(CP) $< $@
 
 
