* upgraded to sgdk 1.80

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
     "${env:GDK}\\res",
     "res",
     "inc"
-]
+],
+"files.associations": {
+    "genesis.h": "c",
+    "vdp.h": "c",
+    "pal.h": "c"
+}
 }
